argocd/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    tailscale.com/proxy-group: argocd-ingress-proxies
spec:
  ingressClassName: tailscale
  rules:
    - host: argocd.tailf7309c.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
